[package]
name = "lora-emergency-button"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.16.0"
log = "0.4.20"
simple_logger = "4.3.0"
serialport = "4.3.0"
reqwest = { version = "0.11.22", features = ["blocking"] }